--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>React 18, TypeScript, Jest, Testing Library, TailwindCSS 3, Vite, and Eslint boilerplate</title>
+        <title>SquaredUp Service Desk</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Overpass:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="root"></div>
